@@ -208,6 +208,7 @@ xnee_replay_event_handler( xnee_data* xd,
       xnee_fake_button_event (xd, xindata->u.event.button, XNEE_RELEASE, sleep_amt);
       break;
     case MotionNotify:
+
       xnee_inc_events_replayed(xd);      
       screen = xindata->u.event.screen_nr ; 
       x      = (int) xindata->u.event.x ; 
@@ -410,14 +411,13 @@ xnee_fake_motion_event_impl (xnee_data* xd,
   int new_x;
   int new_y;
 
-	  
   xnee_verbose((xd, "---> xnee_fake_motion_event\n"));
   xnee_verbose((xd, "---  delay = %d\n", (int)dtime));
   if (!xnee_is_recorder (xd))
     {
 
-      new_x = xnee_resolution_newx(xd,x) + xd->res_info.x_offset;
-      new_y = xnee_resolution_newy(xd,y) + xd->res_info.y_offset;
+  new_x = xnee_resolution_newx(xd,x) + xd->res_info.x_offset;
+  new_y = xnee_resolution_newy(xd,y) + xd->res_info.y_offset;
 
       if (deviceid == 0 )
 	{
@@ -454,14 +454,12 @@ xnee_fake_motion_event_impl (xnee_data* xd,
 				     &axes,
 				     2,
 				     0);
-
 	}
       XFlush(xd->fake);
     }
   
   for (i=0; i<size ; i++)
     {
-
 /*       XTestGrabControl (xd->distr_list[i].dpy, True);  */
 
       xnee_verbose((xd, "XTestFakeMotionEvent (%d, %d, %d, %d, %d))  **\n",
